examples/kubernetes/sesion-3/4-networking/02-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: model-api
  namespace: sesion-3
  labels:
    app.kubernetes.io/part-of: networking-demo
    lab: networking-demo
spec:
  type: ClusterIP
  selector:
    app: model-api
  ports:
    - name: http
      port: 80
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: signal-api
  namespace: sesion-3
  labels:
    app.kubernetes.io/part-of: networking-demo
    lab: networking-demo
spec:
  type: ClusterIP
  selector:
    app: signal-api
  ports:
    - name: http
      port: 80
      targetPort: http
